fixed spacing issue

--- a/style.css
+++ b/style.css
@@ -1,11 +1,9 @@
 .wrapper {
     border: 5px solid black;
-    top: 50%;
-    left: 50%;
-    position: absolute;
+    position: relative;
+    margin: 15px auto;
     width: 400px;
     height: 400px;
-    transform: translate(-50%, -50%);
     background: url('background.png');
 }
 
@@ -21,4 +19,15 @@ body {
     background-color: lightgreen;
     text-align: center;
     font-family:Arial, Helvetica, sans-serif;
+}
+
+.game {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.buttons {
+    margin-top: 5px;
+    text-align: center;
 }
